# napari-cool-tools

./: README.md  installer.bat  launch_cool-tools_conda.bat
experimental/batch-tools/: _parse_ini.py  batch_process_profs.py  benFastCC.py  benFastCC_Mod.py  calc_gpu_batches.py  extract_batches_around_indicies.py  generate_bscan_variants.py  generate_desktop_octa.py  generate_variant_folds.py  oct_unp_to_tiff.py  oct_unp_to_tiff_pt.py  og_batch_process_weird_bug.py  save_unp_slice.py  susan_data_polars.py  susan_data_polars2.py  update_meta_files.py  view_bscan_variants.py  view_training_folds.py
napari-cool-tools-img-proc/: setup.cfg
napari-cool-tools-img-proc/src/napari_cool_tools_img_proc/: _denoise.py  _denoise_funcs.py  _equalization.py  _equalization_funcs.py  _filters.py  _luminance.py  _luminance_funcs.py  _morphology.py  _morphology_funcs.py  _nn_tools_2D.py  _normalization.py  _normalization_funcs.py  napari.yaml
napari-cool-tools-io/src/napari_cool_tools_io/: __init__.py  _float64_writer.py  _import_export_labels.py  _import_unp.py  _load_slo.py  _mat_reader.py  _mat_writer.py  _prof_reader.py  _prof_writer.py  _screen_capture.py  _torch_reader.py  _torch_writer.py  _unp_reader.py  napari.yaml
napari-cool-tools-oct-preproc/src/jj_nn_framework/: data_setup.py  image_funcs.py  mod_utils.py  nn_transforms copy.py  nn_transforms.py  nn_transforms_v2.py  project_models.py
napari-cool-tools-registration/: setup.cfg
napari-cool-tools-segmentation/src/models/: pix2pixHD_model.py
napari-cool-tools-submenu-patch/napari_cool_tools_submenu_patch/: __init__.py
(+21 files in other folders)
