[metadata]
name = napari-cool-tools-img-proc
version = 0.0.1
description = B-scan/Image processing tools

[options]
packages = find:
install_requires =
    napari-cool-tools-submenu-patch
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =

[options.package_data]
* = *.yaml
